fix design on small screens

--- a/frontend/src/style/general.scss
+++ b/frontend/src/style/general.scss
@@ -60,7 +60,6 @@ button {
     padding: 0.8rem;
     font-size: 0.8rem;
     color: $col-text;
-    min-width: 18rem;
     height: 3.5rem;
 
     border: 0.25rem solid $col-dark-brown;
